clusters/dev/apps/minecraft/service-bedrock.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-bedrock
  namespace: minecraft
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.202  # Reserved MetalLB IP
  selector:
    app.kubernetes.io/name: minecraft
  ports:
    - name: bedrock
      protocol: UDP
      port: 19132
      targetPort: 19132
