clusters/dev/apps/minecraft/service-java.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-java
  namespace: minecraft
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minecraft
  ports:
    - name: java
      protocol: TCP
      port: 25565
      targetPort: 25565
